--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
- packages are looking for funding
-  run `npm fund` for details
-Running "npm run build"
-> ica-forms-frontend@1.0.0 build
-> vite build
-vite v5.4.19 building for production...
-✓ 0 modules transformed.
-x Build failed in 10ms
-error during build:
-Could not resolve entry module "index.html".
-    at getRollupError (file:///vercel/path0/node_modules/rollup/dist/es/shared/parseAst.js:401:41)
-    at error (file:///vercel/path0/node_modules/rollup/dist/es/shared/parseAst.js:397:42)
-    at ModuleLoader.loadEntryModule (file:///vercel/path0/node_modules/rollup/dist/es/shared/node-entry.js:21511:20)
-    at async Promise.all (index 0)
-Error: Command "npm run build" exited with 1
+<!doctype html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ICA Forms</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
