--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- 👇 clave: apuntar a scr/main.jsx (no src) -->
+    <script type="module" src="/scr/main.jsx"></script>
   </body>
 </html>
